# Projectile-Simulation

./: .gitignore  CMakeLists.txt  README.md  main.c
include/Custom/: SDL_input.h  SDL_math.h  SDL_shape.h  game.h  obj_properties.h
src/: game.c
src/input/: SDL_input.c
src/utils/: SDL_math.c  SDL_shape.c
